# haskell-buddy

./: .travis.yml  AUTHORS  LICENSE  README.md  buddy.cabal  haskell-buddy.cabal
cbits/: bdd.h  bddio.c  bddop.c  bddtree.h  bvec.c  bvec.h  cache.c  cache.h  config.h  fdd.c  fdd.h  imatrix.c  kernel.c  kernel.h  pairs.c  prime.c  reorder.c  tree.c
examples/: Placement.hs  Queens.hs
src/: Buddy.hs
src/Buddy/: Interface.hs
