name:                haskell-buddy
version:             0.1.0.0
synopsis:      BuDDy Haskell binding      
description:   very simple binding for BDD library BuDDy

license:             AllRightsReserved
license-file:        LICENSE
author:              Johannes Waldmann
maintainer:          johannes.waldmann@htwk-leipzig.de
category:            Numeric
build-type:          Simple
cabal-version:       >=1.10
homepage:            https://github.com/jwaldmann/haskell-buddy

extra-source-files:
  cbits/bvec.h
  cbits/tree.c
  cbits/imatrix.c
  cbits/kernel.h
  cbits/prime.h
  cbits/prime.c
  cbits/cache.h
  cbits/bdd.h
  cbits/bddtree.h
  cbits/fdd.h
  cbits/fdd.c
  cbits/reorder.c
  cbits/bddop.c
  cbits/kernel.c
  cbits/imatrix.h
  cbits/bddio.c
  cbits/cache.c
  cbits/bvec.c
  cbits/pairs.c

source-repository head
    type: git
    location: git://github.com/jwaldmann/haskell-buddy.git

library
  hs-source-dirs: src
  exposed-modules:
      Buddy

  other-modules:
      Buddy.Interface

  build-depends:
        base        < 5,
        mtl,
        containers,
        time

  ghc-options: -Wall -fno-warn-orphans
  default-language: Haskell2010
  default-extensions:  

  include-dirs:     cbits
  includes:         bdd.h
  cc-options:       -w 

  c-sources:
    cbits/tree.c
    cbits/imatrix.c
    cbits/prime.c
    cbits/fdd.c
    cbits/reorder.c
    cbits/bddop.c
    cbits/kernel.c
    cbits/bddio.c
    cbits/cache.c
    cbits/bvec.c
    cbits/pairs.c

